# vortex_quant

./: .gitignore  README.md  pyproject.toml  skills-lock.json
.obsidian/: graph.json  workspace.json
.serena/: project.yml
app/: main.py
design/: 08-heuristic-evaluation.md
docs/: 00-功能需求与架构蓝图.md  01-数据域设计说明书-v1.md  02-profile-配置模型说明书-v1.md  03-运营者数据下载使用说明-v1.md  README.md  data_dictionary.md  evaluation_design.md  tushare_api_reference.md  因子评测与权重筛选知识体系.md  用户手册.md  量化投资系统全流程.xmind
scripts/: README.md  _check_data.py  _run_all_downloads.py  auto_pipeline.py  download_fina_incremental.py  gen_charts.py  gen_html_report.py  gen_qs_report.py  init_data.py  resume_data.py  run_backtest_full.py  run_backtest_sa.py  run_factor_test.py  run_full_download.py  run_strategy.py  run_sync.py  test_imports.py  test_notify.py  test_refactor.py  watch_and_run.py
tests/: conftest.py  test_agent.py  test_backtest.py  test_cli.py  test_cli_interactive.py  test_config.py  test_control_console.py  test_data_components.py  test_data_lifecycle.py  test_data_pipeline.py  test_data_pipeline_dedup.py  test_data_recovery.py  test_dividend_classic.py  test_evaluation.py  test_factor_analyzer.py  test_filters.py  test_horizon_policy.py  test_manifest_calendar.py  test_models.py  test_notification_lark.py  test_notification_service.py  test_notifier.py  test_pit.py  test_portfolio.py  test_quality.py  test_research_alpha101_registry.py  test_research_capability.py  test_research_cogalpha_company_run.py  test_research_cogalpha_demo.py  test_research_cogalpha_fitness.py  test_research_cogalpha_quality.py  test_research_cogalpha_recipes.py  test_research_cogalpha_research_cycle.py  test_research_cogalpha_schema.py  test_research_cogalpha_workflow.py  test_research_data_audit.py  (+43 more)
vortex/: __init__.py  (+4 more)
(+372 files in other folders)
