[project]
name = "vortex"
version = "0.1.0"
description = "个人量化投资平台 — 高股息+红利质量+自由现金流策略"
requires-python = ">=3.9"
dependencies = [
    "tushare>=1.4.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]
web = ["fastapi", "uvicorn[standard]"]
report = ["quantstats", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
