[project]
name = "vortex"
version = "0.1.0"
description = "Vortex 本地优先量化交易平台"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyarrow>=14.0",
    "pyyaml>=6.0.3",
    "plotly>=5",
    "duckdb>=1.0",
    "tushare>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vortex = "vortex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vortex"]

[tool.hatch.build.targets.sdist]
include = ["vortex", "pyproject.toml", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast deterministic unit tests",
    "integration: cross-module integration tests",
    "e2e: end-to-end workflow tests",
    "determinism: deterministic/golden-master checks",
    "research: explicit research regression tests, not required for default validation",
    "local_data: tests that require local market data outside the repository",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
